tests/invalid/missing_interface_import2.err_exp
missing_interface_import2.m:009: In definition of predicate `missing_interface_import2.write_key'/3:
missing_interface_import2.m:009:   error: undefined type `key'/0
missing_interface_import2.m:009:   (the modules `group' and `missing_interface_import3' have not been imported in the interface).
missing_interface_import2.m:009: In definition of predicate `missing_interface_import2.write_key'/3:
missing_interface_import2.m:009:   error: undefined type `io.state'/0
missing_interface_import2.m:009:   (the module `io' has not been imported in the interface).
missing_interface_import2.m:009: In definition of predicate `missing_interface_import2.write_key'/3:
missing_interface_import2.m:009:   error: undefined type `io.state'/0
missing_interface_import2.m:009:   (the module `io' has not been imported in the interface).
For more information, try recompiling with `-E'.
